Update _config.yml and Add a cat

--- a/_posts/2019-04-29-test.md
+++ b/_posts/2019-04-29-test.md
@@ -12,5 +12,5 @@ To see how a post can be created.
 
 Let's change some text and see how things change
 
-![mountain-alternative-cover](C:\Users\Lei Shi\workspace\MyBlog\assets\mountain-alternative-cover.jpg)
+<div class="bg-scroll" style="background-image: url('https://lh3.googleusercontent.com/J0TUtX0S31naH8I1MqqnjTS9F1lKs9ZrAhVhsq_P8SMhbMSbn7mYAj7KxcmFBm2QfICnn_yut0-v17yZ_WDxwwaj44v2JX_rEa77AWAaPJtnEue_or5QxQbZ4Ukdm_WS1x519ep6Hw=w2400')"></div>
 
